--- a/src/View/Player/index.html.twig
+++ b/src/View/Player/index.html.twig
@@ -11,11 +11,11 @@
     </div>
 
     <h2>Gardien</h2>
-    <div class="row d-flex justify-content-around">
+    <div class="row d-flex justify-content-around pt-2 pb-5">
         {% for gardien in gardiens %}
-            <div class="card" style="width: 200px;">
-              <img class="card-img-top" style="width: 200px; height: 250px;" src="http://via.placeholder.com/200x250" alt="Photo de {{ gardien.lastName }} {{ gardien.firstName }}">
-              <div class="card-body">
+            <div class="card d-flex flex-row">
+              <img class="card-img-top" style="width: 200px; height: 250px;" src="{{ gardien.picture }}" alt="Photo de {{ gardien.lastName }} {{ gardien.firstName }}">
+              <div class="card-body" style="width: 200px; height: 250px;">
                 <p class="card-text">
                   {{ gardien.lastName }}<br/>
                   {{ gardien.firstName }}<br/>
@@ -30,11 +30,11 @@
     </div>
 
     <h2>Poursuiveurs</h2>
-    <div class="row d-flex justify-content-around">
+    <div class="row d-flex justify-content-around pt-2 pb-5">
         {% for poursuiveur in poursuiveurs %}
-            <div class="card" style="width: 200px;">
-              <img class="card-img-top" style="width: 200px; height: 250px;" src="http://via.placeholder.com/200x250" alt="Photo de {{ poursuiveur.lastName }} {{ poursuiveur.firstName }}">
-              <div class="card-body">
+            <div class="card d-flex flex-row">
+              <img class="card-img-top" style="width: 200px; height: 250px;" src="{{ poursuiveur.picture }}" alt="Photo de {{ poursuiveur.lastName }} {{ poursuiveur.firstName }}">
+              <div class="card-body" style="width: 200px; height: 250px;">
                 <p class="card-text">
                   {{ poursuiveur.lastName }}<br/>
                   {{ poursuiveur.firstName }}<br/>
@@ -49,11 +49,11 @@
     </div>
 
     <h2>Batteurs</h2>
-    <div class="row d-flex justify-content-around">
+    <div class="row d-flex justify-content-around pt-2 pb-5">
         {% for batteur in batteurs %}
-            <div class="card" style="width: 200px;">
-              <img class="card-img-top" style="width: 200px; height: 250px;" src="http://via.placeholder.com/200x250" alt="Photo de {{ batteur.lastName }} {{ batteur.firstName }}">
-              <div class="card-body">
+            <div class="card d-flex flex-row">
+              <img class="card-img-top" style="width: 200px; height: 250px;" src="{{ batteur.picture }}" alt="Photo de {{ batteur.lastName }} {{ batteur.firstName }}">
+              <div class="card-body" style="width: 200px; height: 250px;">
                 <p class="card-text">
                   {{ batteur.lastName }}<br/>
                   {{ batteur.firstName }}<br/>
@@ -68,11 +68,11 @@
     </div>
 
     <h2>Attrapeur</h2>
-    <div class="row d-flex justify-content-around">
+    <div class="row d-flex justify-content-around pt-2 pb-5">
         {% for attrapeur in attrapeurs %}
-            <div class="card" style="width: 200px;">
-              <img class="card-img-top" style="width: 200px; height: 250px;" src="http://via.placeholder.com/200x250" alt="Photo de {{ attrapeur.lastName }} {{ attrapeur.firstName }}">
-              <div class="card-body">
+            <div class="card d-flex flex-row">
+              <img class="card-img-top" style="width: 200px; height: 250px;" src="{{ attrapeur.picture }}" alt="Photo de {{ attrapeur.lastName }} {{ attrapeur.firstName }}">
+              <div class="card-body" style="width: 200px; height: 250px;">
                 <p class="card-text">
                   {{ attrapeur.lastName }}<br/>
                   {{ attrapeur.firstName }}<br/>
