Page équipe: informations des joueurs et de leur balais affichés. Reste l'intégration à faire

--- a/src/View/Player/index.html.twig
+++ b/src/View/Player/index.html.twig
@@ -20,7 +20,10 @@
                   {{ gardien.lastName }}<br/>
                   {{ gardien.firstName }}<br/>
                   {{ gardien.size }} cm<br/>
-                  {{ gardien.getAge }} ans<br/>
+                  {{ gardien.getAge }} ans<br/><br/>
+                  Balai :<br/>
+                  {{ gardien.broomstickModel }}<br/>
+                  {{ gardien.broomstickSpeed }}km/h<br/>
                 </p>
               </div>
             </div>
@@ -39,7 +42,10 @@
                   {{ poursuiveur.lastName }}<br/>
                   {{ poursuiveur.firstName }}<br/>
                   {{ poursuiveur.size }} cm<br/>
-                  {{ poursuiveur.getAge }} ans<br/>
+                  {{ poursuiveur.getAge }} ans<br/><br/>
+                  Balai :<br/>
+                  {{ poursuiveur.broomstickModel }}<br/>
+                  {{ poursuiveur.broomstickSpeed }}km/h<br/>
                 </p>
               </div>
             </div>
@@ -58,7 +64,10 @@
                   {{ batteur.lastName }}<br/>
                   {{ batteur.firstName }}<br/>
                   {{ batteur.size }} cm<br/>
-                  {{ batteur.getAge }} ans<br/>
+                  {{ batteur.getAge }} ans<br/><br/>
+                  Balai :<br/>
+                  {{ batteur.broomstickModel }}<br/>
+                  {{ batteur.broomstickSpeed }}km/h<br/>
                 </p>
               </div>
             </div>
@@ -77,7 +86,10 @@
                   {{ attrapeur.lastName }}<br/>
                   {{ attrapeur.firstName }}<br/>
                   {{ attrapeur.size }} cm<br/>
-                  {{ attrapeur.getAge }} ans<br/>
+                  {{ attrapeur.getAge }} ans<br/><br/>
+                  Balai :<br/>
+                  {{ attrapeur.broomstickModel }}<br/>
+                  {{ attrapeur.broomstickSpeed }}km/h<br/>
                 </p>
               </div>
             </div>
