--- a/src/View/Team/add.html.twig
+++ b/src/View/Team/add.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <h1>Add a new item</h1>
-    {% include 'Item/_form.html.twig' %}
+    <h1>Add a new team</h1>
+    {% include 'Team/_form.html.twig' %}
 {% endblock %}
