--- a/src/View/navbar/navbar.html.twig
+++ b/src/View/navbar/navbar.html.twig
@@ -3,15 +3,12 @@
 
 <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light nav-home " id="navbar">
   <div id="social">
-   <i class="fab fa-facebook" id="fb"></i>
-   <i class="fab fa-instagram"></i>
-   <i class="fab fa-twitter-square"></i>
-   <i class="fas fa-rss-square"></i>
-
-
-
+     <i class="fab fa-facebook" id="fb"></i>
+     <i class="fab fa-instagram"></i>
+     <i class="fab fa-twitter-square"></i>
+     <i class="fas fa-rss-square"></i>
   </div>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler " id="btn-burger" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
