Mise en conformité PSR2

--- a/src/View/Player/index.html.twig
+++ b/src/View/Player/index.html.twig
@@ -9,9 +9,10 @@
     <div class="row d-flex justify-content-around">
         <h1>Composition de l'équipe</h1>
     </div>
-
-    <h2>Gardien</h2>
-    <div class="row d-flex justify-content-around pt-2 pb-5">
+    <div class="row bg-dark">
+      <h2 class="ml-3 mb-0 text-white">Gardien</h2>
+    </div>
+    <div class="row d-flex justify-content-around pt-2 pb-3">
         {% for gardien in gardiens %}
             <div class="card d-flex flex-row">
               <img class="card-img-top" style="width: 200px; height: 250px;" src="{{ gardien.picture }}" alt="Photo de {{ gardien.lastName }} {{ gardien.firstName }}">
@@ -32,8 +33,10 @@
         {% endfor %}
     </div>
 
-    <h2>Poursuiveurs</h2>
-    <div class="row d-flex justify-content-around pt-2 pb-5">
+    <div class="row bg-dark">
+      <h2 class="ml-3 mb-0 text-white">Poursuiveurs</h2>
+    </div>
+    <div class="row d-flex justify-content-around pt-2 pb-3">
         {% for poursuiveur in poursuiveurs %}
             <div class="card d-flex flex-row">
               <img class="card-img-top" style="width: 200px; height: 250px;" src="{{ poursuiveur.picture }}" alt="Photo de {{ poursuiveur.lastName }} {{ poursuiveur.firstName }}">
@@ -54,8 +57,10 @@
         {% endfor %}
     </div>
 
-    <h2>Batteurs</h2>
-    <div class="row d-flex justify-content-around pt-2 pb-5">
+    <div class="row bg-dark">
+      <h2 class="ml-3 mb-0 text-white">Batteurs</h2>
+    </div>
+    <div class="row d-flex justify-content-around pt-2 pb-3">
         {% for batteur in batteurs %}
             <div class="card d-flex flex-row">
               <img class="card-img-top" style="width: 200px; height: 250px;" src="{{ batteur.picture }}" alt="Photo de {{ batteur.lastName }} {{ batteur.firstName }}">
@@ -76,8 +81,10 @@
         {% endfor %}
     </div>
 
-    <h2>Attrapeur</h2>
-    <div class="row d-flex justify-content-around pt-2 pb-5">
+    <div class="row bg-dark">
+      <h2 class="ml-3 mb-0 text-white">Attrapeur</h2>
+    </div>
+    <div class="row d-flex justify-content-around pt-2 pb-3">
         {% for attrapeur in attrapeurs %}
             <div class="card d-flex flex-row">
               <img class="card-img-top" style="width: 200px; height: 250px;" src="{{ attrapeur.picture }}" alt="Photo de {{ attrapeur.lastName }} {{ attrapeur.firstName }}">
