--- a/public/assets/css/navbar_fix.css
+++ b/public/assets/css/navbar_fix.css
@@ -1,17 +1,23 @@
-body
-{
-	background: url('../images/home.png') no-repeat fixed center;
-	background-size: cover;
-}
-
-
-
 .fa-bars
 {
 	color: white;
 	height: 30px;
 }
 
+svg
+{
+	height: 55px;
+}
+
+#logo
+{
+	
+
+	
+	position: absolute;
+	top: 1px;
+
+}
 
 #social
 {
@@ -31,7 +37,7 @@ body
 {
 	font-family: 'Poiret One', cursive;
 	font-size: 1.4rem;
-	color: white;
+	color: black;
 	
 
 }
@@ -39,8 +45,9 @@ body
 
 #navbar
 {
+	position: relative;
 
-	background-color: rgba(1,0,1,0)!important;
+	background-color: #EEE!important;
 }
 
 .navbar-light .navbar-nav .nav-link
@@ -80,10 +87,9 @@ body
 
 @media screen and (max-width: 575px)
 {
-	#social
+	#logo
 	{
-		display: none;
-		width: 0%;
+		width: 8vw;
 	}
 
 	#btn-burger
@@ -91,14 +97,17 @@ body
 		margin: auto;
 	}
 
+
+
 	#navbarNav
 	{
-		background-color: rgba(255,255,255,0.65);
+		background-color: #EEE;
+
 	}
 
 	#navbarNav a
 	{
-		color: #833E2F;
+		color: black/*#833E2F*/;
 	}
 }
 
