--- a/public/assets/css/homeNavbar.css
+++ b/public/assets/css/homeNavbar.css
@@ -1,17 +1,11 @@
-body
-{
-	background: url('../images/home.png') no-repeat fixed center;
-	background-size: cover;
-}
-
-
-
+/*********************************************************
+This CSS is applied to the Home page Navbar
+*********************************************************/
 .fa-bars
 {
 	color: white;
 	height: 30px;
 }
-
 
 #social
 {
@@ -25,56 +19,40 @@ body
 	width: 60%;
 }
 
-
-
 #navbar a
 {
 	font-family: 'Poiret One', cursive;
 	font-size: 1.4rem;
 	color: white;
-	
-
 }
-
 
 #navbar
 {
-
 	background-color: rgba(1,0,1,0)!important;
 }
 
 .navbar-light .navbar-nav .nav-link
 {
-
-
 	font-family: 'Kanit', sans-serif;
 	color: white;
 }
 
 .navbar-light .navbar-nav .nav-link:hover
 {
-
 	color: #833E2F;
 }
 
-
-
-
-@media screen and (max-width: 1024px) 
+@media screen and (max-width: 1024px)
 {
-
-
-  	.ul-home 
+  	.ul-home
   	{
 	  	margin: auto;
 	  	width: 100%;
   	}
 
-
 	  .ul-home > li
 	{
 		margin:auto;
-
 	}
 }
 
