--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -14,9 +14,9 @@
     <title>{% block title %}{% endblock %}</title>
 
     <link rel="stylesheet" href="/assets/css/styles.css">
-     <link rel="icon" href="/assets/images/favicon.png">
+    <link rel="icon" href="/assets/images/favicon.png">
 
-    {% block stylesheet %}<link rel="stylesheet" type="text/css" href="../assets/css/navbar_fix.css">{% endblock %}
+    {% block stylesheet %}<link rel="stylesheet" type="text/css" href="../assets/css/globalNavbar.css">{% endblock %}
 
 </head>
 
