--- a/public/assets/css/player.css
+++ b/public/assets/css/player.css
@@ -32,6 +32,7 @@ h2
     position: relative;
     width: 280px;
     height: 350px;
+    margin-bottom: 10px;
 }
 
 .custom-card-img
@@ -63,16 +64,3 @@ h2
 }
 
 /*****************************************************/
-
-@media (hover: hover)
-{
-  .card
-  {
-    display: none!important;
-  }
-}
-
-@media screen and (min-width: 575px)
-{
-
-}
