Correction du problème de hover au touché + Augmentation de l'opacité du texte sur les cartes

--- a/src/View/Player/player.html.twig
+++ b/src/View/Player/player.html.twig
@@ -108,4 +108,5 @@
 {% block javascript %}
 {{ parent() }}
 <script src="/assets/js/player.js"></script>
+<script src="/assets/js/watchForHover.js"></script>
 {% endblock %}
