--- a/public/assets/css/player.css
+++ b/public/assets/css/player.css
@@ -1,9 +1,11 @@
 body {
     font-size: 20px;
+    background-color: darkgray;
 }
 
 h1{
     margin-top: 5vh;
+    color: yellow;
 }
 
 h2
@@ -54,13 +56,14 @@ h2
     background-color: rgba(0,0,0, 0.6);
     color: white;
     text-align: center;
-    transition: height 1s, padding-top 1s;
+    transition: height 1s, padding-top 1s, background-color 1s;
 }
 
-.custom-card:hover .custom-card-text, .clicked .custom-card-text
+body.hasHover .custom-card:hover .custom-card-text, .clicked .custom-card-text
 {
     height: 100%;
     padding-top: 30px;
+    background-color: rgba(0,0,0, 0.8);
 }
 
 /*****************************************************/
