--- a/src/View/navbar/navbar_fix.html.twig
+++ b/src/View/navbar/navbar_fix.html.twig
@@ -20,7 +20,7 @@
         <a class="nav-link" href="#">Calendrier</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="#">Contact</a>
+        <a class="nav-link " href="/contact">Contact</a>
       </li>
 
     </ul>
