--- a/src/View/Home/home.html.twig
+++ b/src/View/Home/home.html.twig
@@ -1,5 +1,5 @@
 {% extends 'layout.html.twig' %}
 {% block title %}Bienvenue{% endblock %}
 {% block stylesheet %}<link rel="stylesheet" type="text/css" href="../assets/css/navbar.css">{% endblock %}
- {% block navbar %}{% include 'navbar/navbar.html.twig'%} {% endblock %}
-
+{% block navbar %}{% include 'navbar/navbar.html.twig'%} {% endblock %}
+{% block footer %}{% endblock %}
