--- a/src/View/Player/player.html.twig
+++ b/src/View/Player/player.html.twig
@@ -14,7 +14,7 @@
         <h1>Composition de l'équipe</h1>
     </div>
     <div class="row position-bar d-flex justify-content-around">
-      <h2 class="ml-3 mb-0 ">Gardien</h2>
+      <h2 class="ml-3 mb-0 gardien"> Gardien</h2>
     </div>
     <div class="row d-flex justify-content-around pt-2 pb-3">
 
@@ -37,7 +37,7 @@
     </div>
 
     <div class="row position-bar d-flex justify-content-around">
-      <h2 class="ml-3 mb-0 ">Poursuiveurs</h2>
+      <h2 class="ml-3 mb-0 poursuiveurs">Poursuiveurs </h2>
     </div>
     <div class="row d-flex justify-content-around pt-2 pb-3">
         {% for poursuiveur in poursuiveurs %}
@@ -59,7 +59,7 @@
     </div>
 
     <div class="row position-bar d-flex justify-content-around">
-      <h2 class="ml-3 mb-0 ">Batteurs</h2>
+      <h2 class="ml-3 mb-0 batteurs"> Batteurs</h2>
     </div>
     <div class="row d-flex justify-content-around pt-2 pb-3">
         {% for batteur in batteurs %}
@@ -81,7 +81,7 @@
     </div>
 
     <div class="row position-bar d-flex justify-content-around">
-      <h2 class="ml-3 mb-0 ">Attrapeur</h2>
+      <h2 class="ml-3 mb-0 attrapeur">Attrapeur </h2>
     </div>
     <div class="row d-flex justify-content-around pt-2 pb-3">
         {% for attrapeur in attrapeurs %}
