Mise en page Home, Equipe, Contact terminées

--- a/public/assets/css/homeNavbar.css
+++ b/public/assets/css/homeNavbar.css
@@ -10,7 +10,7 @@ This CSS is applied to the Home page Navbar
 #social
 {
 	color: white;
-	font-size: 1.95rem;
+	font-size: 1.8rem;
 }
 
 .ul-home
@@ -23,7 +23,7 @@ This CSS is applied to the Home page Navbar
 {
 	font-family: 'Poiret One', cursive;
 	font-size: 1.4rem;
-	color: white;
+	color: #9E1607;
 }
 
 #navbar
