--- a/src/View/Navbar/homeNavbar.html.twig
+++ b/src/View/Navbar/homeNavbar.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light nav-home " id="navbar">
+<nav class="navbar navbar-expand-sm navbar-light bg-light nav-home " id="navbar">
   <div id="social">
      <i class="fab fa-facebook" id="fb"></i>
      <i class="fab fa-instagram"></i>
