--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -1,5 +1,32 @@
-body
-{
-    background: url('../images/home.png') no-repeat fixed center;
+body{
+    background: url('../images/home/home_bg.jpg') no-repeat fixed right;
     background-size: cover;
+    height: 100vh;
+    position: relative;
 }
+
+
+.logo {
+    width: 100vw;
+    height: calc(100vh - 100px);
+}
+
+.logo img {
+    opacity: 0.7;
+}
+
+@media (orientation: landscape) {
+    .logo img{
+        height: 80vh;
+        margin: auto;
+    }
+}
+
+@media (orientation: portrait) {
+    .logo img{
+        width: 100vw;
+        height: 125vw;
+
+    }
+}
+
