--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -22,7 +22,7 @@
 
 <body>
 
- {% block navbar %}{% include 'navbar/navbar_fix.html.twig'%}{% endblock %}
+ {% block navbar %}{% include 'Navbar'%}{% endblock %}
  {% block content %}{% endblock %}
 
 
